[tool.black]
line-length = 88
exclude = '''
/(
  | migrations
  | .venv
)/
'''

[tool.flake8]
ignore = ["F405", "E501", "W503","E722", "E731", "E741",]
max-line-length = 88
exclude = [
    ".git", "migrations", "node_modules", "docs", ".venv", "frontend"
]
statistics = false

[tool.isort]
line_length = 88
skip_glob = "**/migrations/*.py"
multi_line_output = 3
profile = "black"
filter_files = true
include_trailing_comma = true
force_grid_wrap = 2

[tool.poetry]
name = "web1_django"
version = "0.1.0"
description = "webproject with apps: blog, contact, services, shop..."
authors = ["Piwero <piwero@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
Django = "3.2.8"
django-extensions = "^3.1.3"
dj-database-url = "^0.5.0"
install = "^1.3.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
python-decouple = "^3.5"
whitenoise = "^5.3.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
black = "21.9b0"
flake9 = "3.8.3.post2"
ipdb = "0.13.9"
isort = "5.9.3"
pre-commit = "2.15.0"
pytest = "^6.2.5"
pytest-django = "^4.4.0"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

