[tool.black]
line-length = 88
exclude = '''
/(
  | migrations
  | .venv
)/
'''

[tool.flake8]
ignore = ["F405", "E501", "W503","E722", "E731", "E741",]
max-line-length = 88
exclude = [
    ".git", "migrations", "node_modules", "docs", ".venv", "frontend"
]
statistics = false

[tool.isort]
line_length = 88
skip_glob = "**/migrations/*.py"
multi_line_output = 3
profile = "black"
filter_files = true
include_trailing_comma = true
force_grid_wrap = 2

[tool.poetry]
name = "web1_django"
version = "0.1.0"
description = "webproject with apps: blog, contact, services, shop..."
authors = ["Piwero <piwero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.1"
Django = "^5.0.0"
django-extensions = "^3.1.5"
dj-database-url = "^2.0.0"
install = "^1.3.5"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.7"
whitenoise = "^6.4.0"
Pillow = "^10.0.0"

[tool.poetry.dev-dependencies]
black = "24.4.1"
flake9 = "3.8.3.post2"
ipdb = "0.13.13"
isort = "5.13.2"
pre-commit = "3.7.0"
pytest = "^8.0.0"
pytest-django = "^4.5.2"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

