[tool.black]
line-length = 88
exclude = '''
/(
  | migrations
  | .venv
)/
'''

[tool.flake8]
ignore = ["F405", "E501", "W503", "E731", "E741",]
max-line-length = 88
exclude = [
    ".git", "migrations", "node_modules", "docs", ".venv", "frontend"
]
statistics = false

[tool.isort]
line_length = 88
skip_glob = "*/migrations/.py"
multi_line_output = 3
profile = "black"
filter_files = true
include_trailing_comma = true
force_grid_wrap = 2

[tool.poetry]
name = "web1_django"
version = "0.1.0"
description = "webproject with apps: blog, contact, services, shop..."
authors = ["Piwero <piwero@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
Django = "3.2.4"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake9 = "3.8.3
ipdb = "^0.13.9"
isort = "^5.8.0"
pre-commit = "^2.13.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
